--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,7 +19,10 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.10'  # Hoặc dùng phiên bản ổn định hơn như 3.10 thay vì 3.12
+
+    - name: Install build tools
+      run: sudo apt-get install -y build-essential
 
     - name: Install dependencies
       run: |
